<resources>
    <string name="app_name">Wifi Proxy</string>
    <string name="bili_wifi_proxy">bili wifi 自动代理</string>
    <string name="charles_proxy">Charles 代理(8888)</string>
    <string name="proxy_man_proxy">ProxyMan 代理(9091)</string>
    <string name="hassan_proxy">Hassan 代理(80)</string>
    <string name="hassan_proxy_2">Hassan 代理2(80)</string>
    <string name="b_proxy">BProxy(8080)</string>
    <string name="open_proxy">开启代理</string>
    <string name="close_proxy">关闭代理</string>
</resources>